summative.moria.Moria.scala.error
Erreur de compilation :
Moria:16: error: not found: value Direction
  while(getDirection() != Direction.OUEST){
                          ^