summative.moria.Moria.scala.code
def moria(){
  gauche()
  gauche()
  while(!estFaceMur() || !estSurBiscuit()){
   avance()
  }
  if(estSurBiscuit){
    rangerBiscuit()
  } else {
    deplacementFinale
  }
}

def rangerBiscuit(){
  prendBiscuit()
  while(getDirection() != Direction.OUEST){
    gauche()
  }
  while(!estSurBiscuit){
    avance()
  }
  recule()
  poseBiscuit()
  gauche()
  gauche()
}



def deplacementFinale(){
  droite()
  avance()
  gauche()
  avance()
}